# vis_ifeval

./: .gitignore  ANALYTICS_SETUP.md  BROWSER_LOGIN_GUIDE.md  ENABLE_PAGES_NOW.md  ENABLE_PAGES_STEP_BY_STEP.md  FOUNDER_TECHNICAL_DOC.md  PUSH_INSTRUCTIONS.md  QUICK_ANALYTICS_ACCESS.md  QUICK_START_MAC.md  README.md  REAL_MODEL_GUIDE.md  RENDERING.md  REPOSITORY_STRUCTURE.md  SETUP_MACBOOK.md  pyproject.toml  requirements.txt  setup_macbook.sh  test_gemini.sh  test_pipeline.sh  test_special_evaluators_debug.py
.github/workflows/: analytics.yml
docs/: index.html
docs/analytics/: README.md  enable_pages.md  index.html
docs/evaluation/: evaluation_metrics.txt
docs/guides/: INSTALL_AND_COMPILE.md  QUICK_START.md  README_IEEE_PAPER.md  README_PAPER.md  VISUALIZATION_GUIDE.md
docs/reports/: COMPLETION_SUMMARY.md  CURRENT_STATUS.md  FINAL_SUBMISSION_README.md  PROJECT_STATUS.md  SUBMISSION_CHECKLIST.md  models_performance_summary.txt
docs/technical/: API_MODELS_GUIDE.md  ARCHITECTURE.md  FOUNDER_TECHNICAL_DOC.md  HLD.md
paper/: comprehensive_report.tex  paper.md  paper_ieee.tex
paper/data/: comparison_data.json
prompts/: prompts.jsonl  prompts_character_consistency.jsonl  prompts_gemini_test.jsonl  prompts_sketch_to_render.jsonl  prompts_test.jsonl
scripts/: run_all_models.py
scripts/analysis/: analyze_errors.py  create_case_studies.py  create_visualizations.py  merge_results.py
scripts/analytics/: track_visit.py
scripts/paper/: add_cost_section.py  compile_paper.sh  install_latex.sh  (+3 more)
submission/: paper.tex
vif_eval_submission_20251119/: README.md
(+46 files in other folders)
